@@ -459,3 +459,5 @@ BouncingBone.DisplayName: Bouncing Bone
 JungleCabbageBoulderProj.DisplayName: Cabbage Boulder
 GarlicOoze.DisplayName: Garlic Ooze
 TarBubble.DisplayName: Tar Bubble
+CornKernal.DisplayName: Corn Kernal
+CornPopped.DisplayName: Popcorn
